# mail-pinger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  nfpm.yaml.in
src/: README.md  main.rs
