[package]
name = "mail-pinger"
version = "0.1.0"
authors = ["Konstantin Sorokin <kvs@sigterm.ru>"]
description = "IMAP server pinger"

[dependencies]
clap = "2.33.3"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_yaml = "0.8.13"
imap = "2.2.0"
native-tls = "0.2.4"
log = "0.4.11"
env_logger = "0.7.1"
libc = "0.2.74"
threadpool = "1.8.1"
failure = "0.1.8"
exitcode = "1.1.2"

[profile.release]
lto = true
